build/log/idf_py_stdout_output_24336
[1/10] Performing build step for 'bootloader'
[1/1] cd /home/ricsi/Documents/Smart_Lock/build/bootloader/esp-idf/esptool_py && /home/ricsi/.espressif/python_env/idf5.2_py3.12_env/bin/python /home/ricsi/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/ricsi/Documents/Smart_Lock/build/bootloader/bootloader.bin
Bootloader binary size 0x54b0 bytes. 0x2b50 bytes (34%) free.
[2/10] No install step for 'bootloader'
[3/10] Completed 'bootloader'
[4/10] Building CXX object esp-idf/uart_driver/CMakeFiles/__idf_uart_driver.dir/src/uart_driver.cpp.obj
FAILED: esp-idf/uart_driver/CMakeFiles/__idf_uart_driver.dir/src/uart_driver.cpp.obj 
/home/ricsi/.espressif/tools/riscv32-esp-elf/esp-13.2.0_20230928/riscv32-esp-elf/bin/riscv32-esp-elf-g++ -DESP_PLATFORM -DIDF_VER=\"v5.2.2\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/ricsi/Documents/Smart_Lock/build/config -I/home/ricsi/Documents/Smart_Lock/components/uart_driver/include -I/home/ricsi/esp/esp-idf/components/newlib/platform_include -I/home/ricsi/esp/esp-idf/components/freertos/config/include -I/home/ricsi/esp/esp-idf/components/freertos/config/include/freertos -I/home/ricsi/esp/esp-idf/components/freertos/config/riscv/include -I/home/ricsi/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/ricsi/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -I/home/ricsi/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -I/home/ricsi/esp/esp-idf/components/freertos/esp_additions/include -I/home/ricsi/esp/esp-idf/components/esp_hw_support/include -I/home/ricsi/esp/esp-idf/components/esp_hw_support/include/soc -I/home/ricsi/esp/esp-idf/components/esp_hw_support/include/soc/esp32c6 -I/home/ricsi/esp/esp-idf/components/esp_hw_support/port/esp32c6/. -I/home/ricsi/esp/esp-idf/components/esp_hw_support/port/esp32c6/private_include -I/home/ricsi/esp/esp-idf/components/heap/include -I/home/ricsi/esp/esp-idf/components/log/include -I/home/ricsi/esp/esp-idf/components/soc/include -I/home/ricsi/esp/esp-idf/components/soc/esp32c6 -I/home/ricsi/esp/esp-idf/components/soc/esp32c6/include -I/home/ricsi/esp/esp-idf/components/hal/platform_port/include -I/home/ricsi/esp/esp-idf/components/hal/esp32c6/include -I/home/ricsi/esp/esp-idf/components/hal/include -I/home/ricsi/esp/esp-idf/components/esp_rom/include -I/home/ricsi/esp/esp-idf/components/esp_rom/include/esp32c6 -I/home/ricsi/esp/esp-idf/components/esp_rom/esp32c6 -I/home/ricsi/esp/esp-idf/components/esp_common/include -I/home/ricsi/esp/esp-idf/components/esp_system/include -I/home/ricsi/esp/esp-idf/components/esp_system/port/soc -I/home/ricsi/esp/esp-idf/components/esp_system/port/include/riscv -I/home/ricsi/esp/esp-idf/components/esp_system/port/include/private -I/home/ricsi/esp/esp-idf/components/riscv/include -I/home/ricsi/esp/esp-idf/components/lwip/include -I/home/ricsi/esp/esp-idf/components/lwip/include/apps -I/home/ricsi/esp/esp-idf/components/lwip/include/apps/sntp -I/home/ricsi/esp/esp-idf/components/lwip/lwip/src/include -I/home/ricsi/esp/esp-idf/components/lwip/port/include -I/home/ricsi/esp/esp-idf/components/lwip/port/freertos/include -I/home/ricsi/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/ricsi/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/ricsi/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/ricsi/esp/esp-idf/components/driver/include -I/home/ricsi/esp/esp-idf/components/driver/deprecated -I/home/ricsi/esp/esp-idf/components/driver/analog_comparator/include -I/home/ricsi/esp/esp-idf/components/driver/dac/include -I/home/ricsi/esp/esp-idf/components/driver/gpio/include -I/home/ricsi/esp/esp-idf/components/driver/gptimer/include -I/home/ricsi/esp/esp-idf/components/driver/i2c/include -I/home/ricsi/esp/esp-idf/components/driver/i2s/include -I/home/ricsi/esp/esp-idf/components/driver/ledc/include -I/home/ricsi/esp/esp-idf/components/driver/mcpwm/include -I/home/ricsi/esp/esp-idf/components/driver/parlio/include -I/home/ricsi/esp/esp-idf/components/driver/pcnt/include -I/home/ricsi/esp/esp-idf/components/driver/rmt/include -I/home/ricsi/esp/esp-idf/components/driver/sdio_slave/include -I/home/ricsi/esp/esp-idf/components/driver/sdmmc/include -I/home/ricsi/esp/esp-idf/components/driver/sigma_delta/include -I/home/ricsi/esp/esp-idf/components/driver/spi/include -I/home/ricsi/esp/esp-idf/components/driver/temperature_sensor/include -I/home/ricsi/esp/esp-idf/components/driver/touch_sensor/include -I/home/ricsi/esp/esp-idf/components/driver/twai/include -I/home/ricsi/esp/esp-idf/components/driver/uart/include -I/home/ricsi/esp/esp-idf/components/driver/usb_serial_jtag/include -I/home/ricsi/esp/esp-idf/components/esp_pm/include -I/home/ricsi/esp/esp-idf/components/esp_ringbuf/include -march=rv32imac_zicsr_zifencei  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=/home/ricsi/Documents/Smart_Lock=. -fmacro-prefix-map=/home/ricsi/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fno-exceptions -fno-rtti -MD -MT esp-idf/uart_driver/CMakeFiles/__idf_uart_driver.dir/src/uart_driver.cpp.obj -MF esp-idf/uart_driver/CMakeFiles/__idf_uart_driver.dir/src/uart_driver.cpp.obj.d -o esp-idf/uart_driver/CMakeFiles/__idf_uart_driver.dir/src/uart_driver.cpp.obj -c /home/ricsi/Documents/Smart_Lock/components/uart_driver/src/uart_driver.cpp
/home/ricsi/Documents/Smart_Lock/components/uart_driver/src/uart_driver.cpp: In member function 'void UartDriver::UartDriver::setUartParameters(uart_config_t)':
/home/ricsi/Documents/Smart_Lock/components/uart_driver/src/uart_driver.cpp:13:28: error: cannot convert 'uart_config_t' to 'uart_config_t*' in assignment
   13 |         this->uartConfig = config;
      |                            ^~~~~~
      |                            |
      |                            uart_config_t
/home/ricsi/Documents/Smart_Lock/components/uart_driver/src/uart_driver.cpp: In member function 'esp_err_t UartDriver::UartDriver::init(uart_port_t, uint8_t, uint8_t, uint8_t, uint8_t, int, int, uint8_t, QueueDefinition**, uint8_t)':
/home/ricsi/Documents/Smart_Lock/components/uart_driver/src/uart_driver.cpp:37:19: warning: comparison is always false due to limited range of data type [-Wtype-limits]
   37 |         if(ctsPin == UART_PIN_NO_CHANGE && rtsPin == UART_PIN_NO_CHANGE) {
/home/ricsi/Documents/Smart_Lock/components/uart_driver/src/uart_driver.cpp:37:51: warning: comparison is always false due to limited range of data type [-Wtype-limits]
   37 |         if(ctsPin == UART_PIN_NO_CHANGE && rtsPin == UART_PIN_NO_CHANGE) {
ninja: build stopped: subcommand failed.
